--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "compile": "gulp compile",
     "test": "gulp test",
     "prepublish": "gulp test",
+    "prepare": "npm run prepublish",
     "functional": "gulp functional-test",
     "browserify": "gulp browserify"
   },
